--- a/style.css
+++ b/style.css
@@ -48,3 +48,67 @@ table {
 }
 
 /* __________________________________________________________ */
+
+.container{
+	width: 330px;
+	overflow: hidden;
+	margin: 50px auto 0 auto;
+}
+
+.container span{
+	display: block;
+	text-align: center;
+	font-family: sans-serif;
+	font-size: 40px;
+	margin-bottom: 40px;
+}
+
+.container .box{
+	float: left;
+	width: 100px;
+	height: 100px;
+	border: 1px solid #000;
+	transition: all .25s ease-in-out;
+	font-size: 85px;
+	text-align: center;
+	line-height: 100px; 
+	cursor: pointer;
+  }
+
+.container .box:hover{
+	background: rgb(174, 244, 255);
+	color: rgb(108, 108, 108);
+}
+
+/* _____________________________________________________________ */
+
+#player-turn {
+  margin-top: 8vh;
+  text-align: center;
+  font-size: 30px;
+}
+
+div.button {
+  text-align: center;
+}
+
+button {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 13px 23px;
+  border: 1px solid #222222;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+  background: #fff;
+  color: #222222;
+  margin-top: 2vh;
+}
+
+button:hover {
+      border-color: #000000;
+      background: #f7f7f7;
+}
